style pass: h2's, page titles, some whitespace, functnbars, file div's Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/Confirm.vm
+++ b/src/templates/screens/Confirm.vm
@@ -1,7 +1,7 @@
 <div class="app" id="confirm">
 $page.setTitle("Confirm Your Email Address")
 
-<h2$page.Title</h2
+<h2>$page.Title</h2>
 
 ## attempt to get the user out of the temp hashtable
 #set ($user = $data.User.getTemp($scarabG.Constant.SESSION_REGISTER))
