--- a/src/templates/screens/Index.vm
+++ b/src/templates/screens/Index.vm
@@ -1,7 +1,7 @@
 <div class="app" id="index">
 $page.setTitle("Scarab functions index")
 
-<h2>$page.getTitle()</h2>
+<h2>$page.Title</h2>
 
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
  <tr>
