--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -118,7 +118,7 @@ $page.setTitle("Queue List")
  <input type="submit" name="eventSubmit_doSearch" value="Refresh" />
 </div>
 
-<div class="functnbar">
+<div class="functnbar2">
  <table cellpadding="0" cellspacing="0" border="0">
   <tr>
 #if ($searchType.equals("advanced"))
