--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -1,20 +1,68 @@
 $page.setTitle("Enter Issue")
 
 #set ($issue = $scarabR.ReportingIssue)
-#set ($action = $link.setPage("entry,Wizard3.vm").setAction("ReportIssue"))
+#set ($action = $link.setPage("entry,Wizard3.vm").setAction("ReportIssue").toString())
 #set ($attrValues = $issue.ModuleAttributeValuesMap)
 
-<div class="app" id="wizard3">
+#set ($module = $scarabR.CurrentModule)
+#set ($user = $data.User)
+
+#set ($templateId = $data.Parameters.getString("templateId"))
+#set ($template = $scarabR.getIssue($templateId))
+#set ($templAttrValues = $template.ModuleAttributeValuesMap)
+
+   <div class="app" id="div2-1-0">
+                <h2>Enter issue (2.1.0)</h2>
+                
+                <div class="tabs">
+                        <table cellpadding="3" cellspacing="0" border="0">
+                        <tr>
+                        <th>1: Summary info</th>
+                        <td>2: <a href="#" title="view duplicate check information">Duplicate check</a></td>
+                        <td>3: <a href="#" title="view verbose information">Verbose info</a></td>
+                        </tr>
+                        </table>
+                </div>
+                                
+                <p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
+                
 <form method="get" action="$action">
+#set ($privateTemplateList = $module.getPrivateTemplates($user))
+#set ($globalTemplateList = $module.GlobalTemplates)
+#if ($privateTemplateList.size() > 0 || $globalTemplateList.size() > 0)
+                <h3>Apply issue entry template</h3>
+                
+                <div class="axial">
+                        <table width="100%" cellpadding="3" cellspacing="2" border="1">
+                     <tr>
+                     <th width="120">templates</th>
+                        
+                     <td><select name="templateId">
+                #foreach ($template in $privateTemplateList)
+                <option value="$template.IssueId">$template.TemplateInfo.Name
+                #end
+                #foreach ($template in $globalTemplateList)
+                <option value="$template.IssueId">$template.TemplateInfo.Name
+                #end
+                        </select> &#160;<input type="submit" value="select" name="eventSubmit_doGotowizard3" /> &#160;<a href="#">template list</a></td>
+                        </tr>
+                        </table>
+                </div>          
+#end
+</form>                
+
+<form method="get" action="$link.setPage("entry,Wizard3.vm")">
+<input type="hidden" name="action" value="ReportIssue");
 
 <h3>Input your issue</h3>
 	
 <div class="axial">
     <table cellpadding="3" cellspacing="2" border="0">
-
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attVal = $attrValues.get($attKey) )
   #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
+  #set ( $templAttVal = $templAttrValues.get($attKey) )
+  #set ( $templAttrInput = $intake.AttributeValue.mapTo($templAttVal) ) 
 
   #if ( $attVal.Attribute.AttributeType.ValidationKey )
         #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
@@ -37,15 +85,21 @@ $page.setTitle("Enter Issue")
     #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
           #userSelectBox ($attVal "")
     #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-          #attrValueLeafSelect ($attVal $field "")
+          #templateAttrValueLeafSelect ($attVal $templAttVal $field "")
     #else
+
+        #if ($attrInput.Value.toString().length() > 0)
+             #set ($currentValue = $attrInput.Value)
+        #elseif ($templAttrInput.Value)
+             #set ($currentValue = $templAttrInput.Value)
+        #end
 
         #if ($attVal.Attribute.AttributeType.Name == "long-string" )
             <textarea name= "$attrInput.Value.Key" class="text" cols="40"
-               rows="4">$!attrInput.Value</textarea>
+               rows="4">$!currentValue</textarea>
         #else
            <input name= "$attrInput.Value.Key"
-                value="$!attrInput.Value" size="45" type="text" class="text" />
+                value="$!currentValue" size="45" type="text" class="text" />
         #end
     #end
             </td>
