--- a/src/templates/screens/Index.vm
+++ b/src/templates/screens/Index.vm
@@ -3,6 +3,11 @@ $page.setTitle("Scarab functions index")
 
 <h2>$page.Title</h2>
 
+<p class="alert">This is not a complete list of pages in the system yet.
+We are working on it. Please go to the temporary
+<a href="$link.setPage("Links.vm")">Links page</a> to see a more complete set of
+links.</p>
+
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
  <tr>
  <td width="50%"><h3>General user functions</h3></td>
@@ -11,49 +16,65 @@ $page.setTitle("Scarab functions index")
  </tr>
  <tr>
  <td width="50%">
-  <div><a href="#"><strong>Enter issue template list</strong></a></div>
-<small>List of all enter issue templates available to role. User can access template details, in order to view or edit, by clicking on the templates name. User selects to use a template via a pop-up menu at the top of the enter isse page. This template remains as the default until another selection is made.</small>
+  <div><a href="$link.setPage("entry,Wizard1.vm")"><strong>Enter issue template list</strong></a></div>
+<small>List of all enter issue templates available to role. User can
+access template details, in order to view or edit, by clicking on the
+templates name. User selects to use a template via a pop-up menu at the
+top of the enter isse page. This template remains as the default until
+another selection is made.</small>
 
-  <div><a href="#"><strong>Saved query list</strong></a></div>
-<small>List of all saved queries avaible to role. User can access saved query details , in order to view or edit, by clicking on the query's name, and execute a query by clicking on it's associated project. Saved queries are also available through a pop-up menu at the top of every screen within scarab.</small>
+  <div><a href="$link.setPage("QueryList.vm")"><strong>Saved query list</strong></a></div>
+<small>List of all saved queries avaible to role. User can access saved
+query details , in order to view or edit, by clicking on the query's
+name, and execute a query by clicking on it's associated project. Saved
+queries are also available through a pop-up menu at the top of every
+screen within scarab.</small>
 
+<!-- FIXME: Not yet done.
   <div><a href="#"><strong>Vote management</strong></a></div>
-<small>This list displays a user's current open votes, and a vote management interface they can use to rescind/reprioritize votes, or to append comments to votes.</small>
+<small>This list displays a user's current open votes, and a vote
+management interface they can use to rescind/reprioritize votes, or to
+append comments to votes.</small>
+-->
 
+<!-- FIXME: Note yet done.
   <div><a href="#"><strong>Auto alert email options</strong></a></div>
-<small>Subscription/frequency options for auto alert emails available per project.</small>
+<small>Subscription/frequency options for auto alert emails available
+per project.</small>
+-->
  </td>
  <td>&nbsp;&nbsp;</td>
  <td width="50%">
-  <div><a href="#"><strong>Approve / reject user submissions</strong></a></div>
-<small>Review and respond interface for user submissions including, role promotions, saved queries, templates, automated alert emails, etc.</small>
+  <div><a href="$link.setPage("Approval.vm")"><strong>Approve / reject user submissions</strong></a></div>
+<small>Review and respond interface for user submissions including, role
+promotions, saved queries, templates, automated alert emails,
+etc.</small>
 
-  <div><a href="#"><strong>Manage "enter issue" form</strong></a></div>
-<small>Add, edit, create, group, and arrange attributes on the "enter issue form".</small>
+<!-- FIXME: Need admin perms to see this. Not Done yet.
+  <div><a href="$link.setPage("admin,ArtifactTypeEdit.vm")"><strong>Manage "enter issue" form</strong></a></div>
+<small>Add, edit, create, group, and arrange attributes on the "enter
+issue form".</small>
+ -->
 
-  <div><a href="#"><strong>Global attributes</strong></a></div>
-<small>Master list of all attributes, both out of the box, and custom, available for use when creating/editing the enter "issue form".</small>
+<!-- FIXME: Need admin perms to see this -->
+  <div><a href="$link.setPage("admin,GlobalAttributeShow.vm")"><strong>Global attributes</strong></a></div>
+<small>Master list of all attributes, both out of the box, and custom,
+available for use when creating/editing the enter "issue form".</small>
 
-  <div><a href="#"><strong>Vote management</strong></a></div>
-<small>Project level settings for votes. Admin settings include determining when a vote is added to an issue (manual or automatic), how many votes are required to force a state change, etc.</small>
+<!-- FIXME: Note yet done.
+  <div><a href=""><strong>Vote management</strong></a></div>
+<small>Project level settings for votes. Admin settings include
+determining when a vote is added to an issue (manual or automatic), how
+many votes are required to force a state change, etc.</small>
+-->
 
+<!-- FIXME: Note yet done.
   <div><a href="#"><strong>Auto alert email list</strong></a></div>
-  <small>Manage, edit, and create auto alert emails used for automated workflow management within a Scarab project.</small>
+  <small>Manage, edit, and create auto alert emails used for automated
+  workflow management within a Scarab project.</small>
+-->
  </td>
  </tr>
 </table>
 
-<p>
-This is going to be the homepage that you first get to when you bring up
-Scarab. In some installations, this will be the Login page and in
-others, you can have it bring up this page. For now, we just have a link
-to our Links.vm page (below) which is a list of the currently
-implemented (and under construction) pages for the application. If you
-have questions or comments, please read
-<a href="http://scarab.tigris.org/project_members.html">this page</a>.
-</p>
-
-<p>
-<a href="$link.setPage("Links.vm")">Links Page</a>
-</p>
 </div>
