--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -54,9 +54,9 @@ $page.setTitle("Enter Issue")
 <form method="get" action="$link.setPage("entry,Wizard3.vm")">
 <input type="hidden" name="action" value="ReportIssue");
 
+<div class="axial">
 <h3>Input your issue</h3>
 	
-<div class="axial">
     <table cellpadding="3" cellspacing="2" border="0">
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attVal = $attrValues.get($attKey) )
@@ -88,9 +88,10 @@ $page.setTitle("Enter Issue")
           #templateAttrValueLeafSelect ($attVal $templAttVal $field "")
     #else
 
+#set ($currentValue = "")
         #if ($attrInput.Value.toString().length() > 0)
              #set ($currentValue = $attrInput.Value)
-        #elseif ($templAttrInput.Value)
+        #elseif ($templAttrInput.Value.toString().length() > 0)
              #set ($currentValue = $templAttrInput.Value)
         #end
 
