--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -9,10 +9,10 @@
  </head>
 <body marginwidth="0" marginheight="0">
 	<div id="banner">
-		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
 		<tr>
 		<td>
-		<a href="$link.setPage("Index.vm")"><img src="/scarab/images/logo.gif" alt="Scarab" width="118" height="23" border="0"/></a>
+		<a href="$link.setPage("Index.vm")"><img src="/scarab/images/logo.gif" alt="Scarab" width="118" height="23" border="0" /></a>
 		</td>
 		<td>
 		<div align="right" id="login">
@@ -46,7 +46,7 @@
 		</table>
 	</div>
 
-<table border="0" cellspacing="12" cellpadding="0" width="97%">
+<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
  <tr valign="top">
   <td id="leftcol" width="20%">
 	<div id="navcolumn">
