set the id differently...login is already used in the stylesheet

--- a/src/templates/screens/Login.vm
+++ b/src/templates/screens/Login.vm
@@ -1,4 +1,4 @@
-<div class="app" id="login">
+<div class="app" id="loginDONOTCHANGETHISID">
 $page.setTitle("Login to Scarab") 
 
 <h2>$page.Title</h2>
