--- a/src/templates/screens/QueryList.vm
+++ b/src/templates/screens/QueryList.vm
@@ -27,9 +27,9 @@ $page.setTitle("Stored Query List")
 <div class="functnbar">
 <table cellpadding="0" cellspacing="0" border="0">
  <tr>
-  <th>General functions</th>
+  <td>General functions</td>
   <td rowspan="2"><img src="/scarab/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-  <th>Select list item(s) to</th>
+  <td>Select list item(s) to</td>
   <td rowspan="2"><img src="/scarab/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
  </tr>
  <tr>
@@ -77,7 +77,7 @@ $page.setTitle("Stored Query List")
   #end
   </td>
   #set ($createdUser = $scarabR.getUser($query.UserId.toString()) )
-  <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
+  <td><a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a></td>
   </tr>
  #end
 
@@ -134,9 +134,9 @@ $page.setTitle("Stored Query List")
  <div class="functnbar">
  <table cellpadding="0" cellspacing="0" border="0">
   <tr>
-   <th>General functions</th>
+   <td>General functions</td>
    <td rowspan="2"><img src="/scarab/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
-   <th>Select list item(s) to</th>
+   <td>Select list item(s) to</td>
    <td rowspan="2"><img src="/scarab/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
   </tr>
   <tr>
