--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -8,37 +8,37 @@
 #set ($attrValues = $search.ModuleAttributeValuesMap)
 
 <div class="axial">
-<table width="100%" cellpadding="3" cellspacing="2" border="1">
-    <tr>
-         <th width="120">
-             issue ID# range:
-             #fieldErrorMsg($query.MinId "")
-             #fieldErrorMsg($query.MaxId "")
-         </th>
+<table cellpadding="3" cellspacing="2" border="0">
+<tr>
+<th width="120">
+				Issue ID# range:
+				#fieldErrorMsg($query.MinId "")
+				#fieldErrorMsg($query.MaxId "")
+</th>
 
-         <td>
-         from:&#160;<input type="text" size="20" 
-             name="$query.MinId.Key" value="$query.MinId" />
-         &#160;&#160;to:&#160;<input type="text" size="20"
-             name="$query.MaxId.Key" value="$query.MaxId" />
-         </td>
-    </tr>
+<td>
+from:&#160;<input type="text" size="20" 
+				name="$query.MinId.Key" value="$query.MinId" />
+&#160;&#160;to:&#160;<input type="text" size="20"
+				name="$query.MaxId.Key" value="$query.MaxId" />
+</td>
+</tr>
 
-    <tr>
-         <th width="120">
-             issue creation date range:
-             #fieldErrorMsg($query.MinDate "")
-             #fieldErrorMsg($query.MaxDate "")
-         </th>
+<tr>
+<th width="120">
+				Issue creation date range:
+				#fieldErrorMsg($query.MinDate "")
+				#fieldErrorMsg($query.MaxDate "")
+</th>
 
-         <td>
-         from:&#160;<input type="text" size="20"
-             name="$query.MinDate.Key" value="$query.MinDate.toString()" />
-         &#160;&#160;to:&#160;<input type="text" size="20"
-             name="$query.MaxDate.Key" value="$query.MaxDate.toString()" />
-         (e.g. MM/DD/YYYY hh:mm)
-         </td>
-    </tr>
+<td>
+from:&#160;<input type="text" size="20"
+				name="$query.MinDate.Key" value="$query.MinDate.toString()" />
+&#160;&#160;to:&#160;<input type="text" size="20"
+				name="$query.MaxDate.Key" value="$query.MaxDate.toString()" />
+(e.g. MM/DD/YYYY hh:mm)
+</td>
+</tr>
 
 
 #foreach ( $attKey in $attrValues.sequence() )
@@ -54,7 +54,7 @@
   #end
 
         <tr>
-         <th width="120">$attVal.Attribute.Name:</th>
+         <th width="120">$attVal.Attribute.Name</th>
 
   ## showing user attributes in separate section
   #if ($attVal.Attribute.AttributeType.AttributeClass.Name != "user")
@@ -70,12 +70,12 @@
 
         #if ($attVal.Attribute.AttributeType.Name == "long-string" )        
 
-            <textarea name= "$attrInput.Value.Key" class="text" cols="40"
+            <textarea name= "$attrInput.Value.Key" cols="40"
                rows="4">$!attrInput.Value</textarea>
         #else
 
            <input name= "$attrInput.Value.Key"
-                value="$!attrInput.Value" size="25" type="text" class="text" />
+                value="$!attrInput.Value" size="25" type="text" />
         #end
 
     #end
@@ -84,11 +84,11 @@
   #end
 #end
 
-        <tr>
-         <th width="120">URL:</th>
+	<tr>
+		<th width="120">URL</th>
 
-         <td><input type="text" size="25" value="http://" /></td>
-        </tr>
+		<td><input type="text" size="25" value="http://" /></td>
+	</tr>
 
 </table>
 </div>
@@ -96,9 +96,9 @@
 <h3>Personnel Search</h3>
 		
 <div class="axial">
-	<table width="100%" cellpadding="3" cellspacing="2" border="1">
+	<table cellpadding="3" cellspacing="2" border="0">
     	<tr>
-			<th width="120">committed by:</th>
+			<th width="120">Committed by</th>
 			<td>
             <select name="$query.CreatedByUserNames.Key" multiple="multiple">
 
@@ -121,13 +121,13 @@
         #set ( $field = "UserId" )
     #end
 
-        <tr>
-         <th width="120">$attVal.Attribute.Name:</th>
+<tr>
+<th width="120">$attVal.Attribute.Name</th>
 
-            <td>
-                #attrValueErrorMsg ( $attVal $field )
-                #userSelectBox ($attVal "5" "multiple")
-            </td>
+			<td>
+							#attrValueErrorMsg ( $attVal $field )
+							#userSelectBox ($attVal "5" "multiple")
+			</td>
 		</tr>
   #end
 #end
@@ -135,16 +135,15 @@
 </div>
 
 
-       <h3>State change query</h3>
-        <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
+<h3>State change query</h3>
+<div class="axial">
+<table cellpadding="3" cellspacing="2" border="0">
 
+<tr>
+	<th width="120">Attribute</th>
 
-        <tr>
-         <th width="120">attribute:</th>
-
-         <td>
-             <select name="$query.StateChangeAttributeId.Key">
+	<td>
+					<select name="$query.StateChangeAttributeId.Key">
 
 #foreach ( $attKey in $attrValues.sequence() )
     #set ( $attVal = $attrValues.get($attKey) )
@@ -160,20 +159,19 @@
                 </option>
     #end
 #end
+					</select>
 
-             </select>
-
-             <input name="eventSubmit_doUpdatestatechangeattribute"
-                value="Update Options" type="submit" />
-         </td>
-        </tr>
+					<input name="eventSubmit_doUpdatestatechangeattribute"
+								value="Update Options" type="submit" />
+	</td>
+</tr>
 
 
-        <tr>
-         <th width="120">state change query:</th>
+<tr>
+	<th width="120">State change query</th>
 
-         <td>
-          <select name="$query.StateChangeFromOptionId.Key">
+	<td>
+		<select name="$query.StateChangeFromOptionId.Key">
 
     #set ( $selected = "" )
     #if ( !$query.StateChangeFromOptionId.Value )
@@ -191,9 +189,9 @@
                 </option>
 #end
 
-             </select> to 
+		</select> to 
 
-             <select name="$query.StateChangeToOptionId.Key">
+		<select name="$query.StateChangeToOptionId.Key">
 
     #set ( $selected = "" )
     #if ( !$query.StateChangeToOptionId.Value )
@@ -210,78 +208,78 @@
                 </option>
 #end
 
-             </select>
+						</select>
 
-           </td>
-        </tr>  
-        
-        <tr>
-           <th width="120">
-               date range:
-               #fieldErrorMsg($query.StateChangeFromDate "")
-               #fieldErrorMsg($query.StateChangeToDate "")
-           </th>
+				</td>
+	</tr>  
+	
+	<tr>
+				<th width="120">
+								Date range:
+								#fieldErrorMsg($query.StateChangeFromDate "")
+								#fieldErrorMsg($query.StateChangeToDate "")
+				</th>
 
-           <td>          
-           
-               <input type="text" size=20 name="$query.StateChangeFromDate.Key"
-                   value="$query.StateChangeFromDate">&nbsp;
-               to
-               <input type="text" size=20 name="$query.StateChangeToDate.Key" 
-                   value="$query.StateChangeToDate">
-               (e.g. MM/DD/YYYY hh:mm)
-           </td>
-        </tr>
+				<td>          
+				
+								<input type="text" size=20 name="$query.StateChangeFromDate.Key"
+												value="$query.StateChangeFromDate">&nbsp;
+								to
+								<input type="text" size=20 name="$query.StateChangeToDate.Key" 
+												value="$query.StateChangeToDate">
+								(e.g. MM/DD/YYYY hh:mm)
+				</td>
+	</tr>
 
-       </table>
-      </div>
+</table>
+</div>
 
 
-      <h3>search results view prefs</h3>
-        <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">sort by:</th>
+<h3>Search results view prefs</h3>
+<div class="axial">
+<table cellpadding="3" cellspacing="2" border="0">
+<tr>
+	<th width="120">Sort by</th>
 
-         <td>
-         <select name="$query.InitialSortAttributeId.Key">
-            <option value="">Choose...</option>
+	<td>
+	<select name="$query.InitialSortAttributeId.Key">
+				<option value="">Choose...</option>
 
 #foreach ( $attKey in $attrValues.sequence() )
   #set ( $attribute = $attrValues.get($attKey).Attribute )
 
-            <option value="$attribute.AttributeId">
-                $attribute.Name
-            </option>
+			<option value="$attribute.AttributeId">
+							$attribute.Name
+			</option>
 
 #end
-         </select>&nbsp;
+</select>&nbsp;
 
-         <select name="$query.InitialSortPolarity.Key">
-             <option value="asc">
-                 ascending
-             </option>
+<select name="$query.InitialSortPolarity.Key">
+				<option value="asc">
+								ascending
+				</option>
 
-             <option value="desc">
-                 descending
-             </option>
-         </select>
-         </td>
-    </tr>
+				<option value="desc">
+								descending
+				</option>
+</select>
+</td>
+</tr>
 
-    <tr>
-         <th width="120">issues per page:</th>
+<tr>
+<th width="120">Issues per page</th>
 
-         <td>
-         <input type="radio" name="resultsPerPage" value="2" checked="checked" /> 25 
-         <input type="radio" name="resultsPerPage" value="50" /> 50 
-         <input type="radio" name="resultsPerPage" value="75" /> 75 
-         <input type="radio" name="resultsPerPage" 
-             value="100" /> 100
-         </td>
-    </tr>
+<td>
+<input type="radio" name="resultsPerPage" value="2" checked="checked" /> 25 
+<input type="radio" name="resultsPerPage" value="50" /> 50 
+<input type="radio" name="resultsPerPage" value="75" /> 75 
+<input type="radio" name="resultsPerPage" 
+				value="100" /> 100
+</td>
+</tr>
 
-  </table>
+</table>
 </div>
 
 #end
